preklad ceske verze do anglicke

--- a/CV/CV_en.tex
+++ b/CV/CV_en.tex
@@ -50,16 +50,16 @@ Speaking of languages I will mention programming languages:
 
 But I would state that I think of separate languages as a "dialects" and thus the theoretical knowledge of computer science and mathematics in general is far more important than learning specific languages which also change during the time.
 
-Mezi své silnější stránky bych dal pracovitost a také vstříctnost a ochota pomoci ostatním. Stejně tak se nevyhíbám osobním kontaktům a rád komunikuji a řeším problémy. Další v pořadí je moje dochvilnost.
+Among my strengths I would put hardworking and also helpfulness and willingness to help others. Likewise, I don't shy away from personal contacts and I like to communicate and solve problems. Next in order is my punctuality.
 
-Nikdo není dokonalý a to samozřejmě znamená, že mám své neduhy. Jedním z nich je, že pokud si myslím a jsem přesvědčený, že mám pravdu, tak nechci ukončit debatu tím, že se neshodnem (ale pokud protistrana dá dobré protiargumenty, tak jsme rychle schopný uznat, že jsme se mýlil). Určitě mám více chyb, ale buď je úmyslně přehlížím anebo se je snažím eliminovat.
+No one is perfect and of course that means I have my flaws. One of them is that if I think and believe I'm right, I don't want to end the debate by disagreeing (but if the other side gives good counter-arguments, I am quickly able to acknowledge that I was wrong). I'm sure I have multiple flaws, but I either deliberately overlook them or try to eliminate them.
 
-\subsection*{Zájmy a preference}
+\subsection*{Interests and preferences}
 
-Osobně preferuji pracovat na zařízeních s operačním systémem \textbf{Linux}, ale nevyhnu se ani práci na počítačí mající \textbf{Windows}. S Linuxem se také pojí, že jsem fanouškem filosofie open-source aplikací.
+Personally, I prefer to work on devices running \textbf{Linux}, but I can't avoid working on computers running \textbf{Windows}. Linux is also linked to the fact that I am a fan of the open-source application philosophy.
 
-Spíše preferuji řešit problémy a navrhovat jejich řešení, než je "datlovat" do počítače. Kvůli tomu jsem si vybral Matfyz na rozdíl od jiných českých univerzit, které dokáží "vygenerovat" lepší developery, ale nemají tak velkou znalost matematiky a informatické teorie.
+I prefer to solve problems and design solutions rather than "date" them into the computer. This is why I chose Matfyz, unlike other Czech universities that can "generate" better developers, but do not have such a great knowledge of mathematics and computer theory.
 
-S tím také zmíním, že ještě mám v plánu pokračovat magisterským studiem teoretické informatiky.
+With that said, I will also mention that I still plan to pursue a master's degree in theoretical computer science.
 
 \end{document}
