updated CV and dezinfo page

--- a/CV/CV_cs.tex
+++ b/CV/CV_cs.tex
@@ -25,7 +25,8 @@
 \begin{itemize}
 	\item Základní škola (1.-5. ročník): \href{https://zsstupkova.cz/}{ZŠ Stupkova, Olomouc}
 	\item Gymnázium (osmileté s dokončenou maturitou): \href{https://www.gytool.cz/}{Gymnázium Olomouc-Hejčín}
-	\item Bakalářské studium (zatím nedokončené) v oboru Informatika: \href{https://www.mff.cuni.cz/}{Univerzita Karlova, Matematicko-Fyzikální fakulta}
+	\item Bakalářské studium v oboru Informatika: \href{https://www.mff.cuni.cz/}{Univerzita Karlova, Matematicko-Fyzikální fakulta}
+	\item Magisterské studium (zatím nedokončené) v oboru Diskrétní modely a algoritmy: \href{https://www.mff.cuni.cz/}{Univerzita Karlova, Matematicko-Fyzikální fakulta}
 \end{itemize}
 
 \subsection*{Pracovní zkušenosti}
