--- a/CV/CV_en.tex
+++ b/CV/CV_en.tex
@@ -15,7 +15,7 @@
 \begin{itemize}
 	\item Name: \textit{Tomáš Turek}
 	\item Date of birth: \textit{24.03.2001}
-	\item Place: \textit{Olomouc, Česká republika}
+	\item Place of birth: \textit{Olomouc, Česká republika}
 	\item Mail: \href{mailto:tom.turek@atlas.cz}{tom.turek@atlas.cz}
 	\item Github: \href{https://github.com/metury}{metury}
 \end{itemize}
@@ -25,7 +25,8 @@
 \begin{itemize}
 	\item Primary school (first 5 years): \href{https://zsstupkova.cz/}{ZŠ Stupkova, Olomouc}
 	\item High school (eight years with a finished diploma): \href{https://www.gytool.cz/}{Gymnázium Olomouc-Hejčín}
-	\item Bachelors studies (yet not finished) in Computer science: \href{https://www.mff.cuni.cz/}{Univerzita Karlova, Matematicko-Fyzikální fakulta}
+	\item Bachelors studies in Computer science: \href{https://www.mff.cuni.cz/}{Univerzita Karlova, Matematicko-Fyzikální fakulta}
+	\item Master studies (yet not finished) in Discrete models and algorithms: \href{https://www.mff.cuni.cz/}{Univerzita Karlova, Matematicko-Fyzikální fakulta}
 \end{itemize}
 
 \subsection*{Previous experiences}
