--- a/CV/CV_cs.tex
+++ b/CV/CV_cs.tex
@@ -32,7 +32,7 @@
 \subsection*{Pracovní zkušenosti}
 
 \begin{itemize}
-\item Manuální brigáda v Dánsku. - Sice není ničím zajímává z pohledu programátorských zkušeností, ale i tak vhodné zmínit práci v cizí zemi a cizím jazykem.
+\item Manuální brigáda v Dánsku. - Sice není ničím zajímavá z pohledu programátorských zkušeností, ale i tak vhodné zmínit práci v cizí zemi a cizím jazykem.
 \end{itemize}
 
 \subsection*{Osobní vlastnosti}
