--- a/CV/CV_en.tex
+++ b/CV/CV_en.tex
@@ -1,4 +1,12 @@
-\documentclass{article}
+\documentclass[12pt,a4paper]{article}
+\setlength\textwidth{160mm}
+\setlength\textheight{247mm}
+\setlength\oddsidemargin{0mm}
+\setlength\evensidemargin{0mm}
+\setlength\topmargin{0mm}
+\setlength\headsep{0mm}
+\setlength\headheight{0mm}
+\let\openright=\clearpage
 
 \usepackage{hyperref}
 
