--- a/CV/CV_en.tex
+++ b/CV/CV_en.tex
@@ -1,8 +1,8 @@
-\documentclass[12pt,a4paper]{article}
-\setlength\textwidth{160mm}
+\documentclass{article}
+\setlength\textwidth{170mm}
 \setlength\textheight{247mm}
-\setlength\oddsidemargin{0mm}
-\setlength\evensidemargin{0mm}
+\setlength\oddsidemargin{-5mm}
+\setlength\evensidemargin{-5mm}
 \setlength\topmargin{0mm}
 \setlength\headsep{0mm}
 \setlength\headheight{0mm}
