--- a/aoc/2023-01.md
+++ b/aoc/2023-01.md
@@ -76,5 +76,6 @@ with open('INPUT') as f:
     second_sum += (mins.index(my_min(mins)) + 1)*10 + maxs.index(max(maxs)) + 1
 
 print(f"First part: {first_sum}")
-print(f"Second part: {second_sum}")```
+print(f"Second part: {second_sum}")
+```
 
