update to pages of aoc

--- a/aoc/2023-01.md
+++ b/aoc/2023-01.md
@@ -15,10 +15,9 @@ This is a solution of the day 01.
 
 ```py
 #!/usr/bin/env python3
-
 import ahocorasick
 
-# INitialize everythink
+# Initialize everythink
 first_sum = 0
 second_sum = 0
 numbers = ['one', 'two', 'three', 'four', 'five', 'six', 'seven', 'eight', 'nine']
