--- a/aoc/2023-04.md
+++ b/aoc/2023-04.md
@@ -16,8 +16,13 @@ This is a solution of the day 04.
 ```py
 #!/usr/bin/env python3
 
+# Out of curiosity I got the time my solution.
+import time
+
 first_sum = 0
 second_sum = 0
+
+tic = time.perf_counter()
 
 with open('INPUT') as f:
   multiples = [1]
@@ -44,7 +49,10 @@ with open('INPUT') as f:
       points = 2 ** (len(res) - 1)
     first_sum += points
 
+toc = time.perf_counter()
+
 print(f"First part: {first_sum}")
 print(f"Second part: {second_sum}")
+print(f"Time: {((toc - tic) * 1000):3f} ms")
 ```
 
