--- a/aoc/2023.md
+++ b/aoc/2023.md
@@ -19,3 +19,4 @@ This contains tasks from the year 2023.
 - [Day 08](/aoc/2023/08/)
 - [Day 09](/aoc/2023/09/)
 - [Day 10](/aoc/2023/10/)
+- [Day 11](/aoc/2023/11/)
