--- a/aoc/2022-11.md
+++ b/aoc/2022-11.md
@@ -2,7 +2,7 @@
 layout: page
 title: Day 11
 parent: Year 2022
-grand_parent: Advent of code
+grand_parent: advent of code
 permalink: /aoc/2022/11/
 ---
 
