--- a/aoc/2023-02.md
+++ b/aoc/2023-02.md
@@ -2,7 +2,7 @@
 layout: page
 title: Day 02
 parent: Year 2023
-grand_parent: Advent of code
+grand_parent: advent of code
 permalink: /aoc/2023/02/
 ---
 
