--- a/aoc/2023.md
+++ b/aoc/2023.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Year 2023
-parent: Advent of code
+parent: advent of code
 permalink: /aoc/2023/
 has_children: true
 ---
@@ -20,3 +20,4 @@ This contains tasks from the year 2023.
 - [Day 09](/aoc/2023/09/)
 - [Day 10](/aoc/2023/10/)
 - [Day 11](/aoc/2023/11/)
+- [Day 12](/aoc/2023/12/)
