--- a/aoc/2021-04.md
+++ b/aoc/2021-04.md
@@ -2,7 +2,7 @@
 layout: page
 title: Day 04
 parent: Year 2021
-grand_parent: Advent of code
+grand_parent: advent of code
 permalink: /aoc/2021/04/
 ---
 
