--- a/aoc/2021-07.md
+++ b/aoc/2021-07.md
@@ -2,7 +2,7 @@
 layout: page
 title: Day 07
 parent: Year 2021
-grand_parent: Advent of code
+grand_parent: advent of code
 permalink: /aoc/2021/07/
 ---
 
