--- a/aoc/2023.md
+++ b/aoc/2023.md
@@ -21,3 +21,4 @@ This contains tasks from the year 2023.
 - [Day 10](/aoc/2023/10/)
 - [Day 11](/aoc/2023/11/)
 - [Day 12](/aoc/2023/12/)
+- [Day 13](/aoc/2023/13/)
