--- a/aoc/2023.md
+++ b/aoc/2023.md
@@ -8,6 +8,7 @@ has_children: true
 
 This contains tasks from the year 2023.
 
+### Days
 
 - [Day 01](/aoc/2023/01/)
 - [Day 02](/aoc/2023/02/)
@@ -22,3 +23,4 @@ This contains tasks from the year 2023.
 - [Day 11](/aoc/2023/11/)
 - [Day 12](/aoc/2023/12/)
 - [Day 13](/aoc/2023/13/)
+- [Day 14](/aoc/2023/14/)
