added new day of aoc

--- a/aoc/2023.md
+++ b/aoc/2023.md
@@ -25,3 +25,4 @@ This contains tasks from the year 2023.
 - [Day 13](/aoc/2023/13/)
 - [Day 14](/aoc/2023/14/)
 - [Day 15](/aoc/2023/15/)
+- [Day 16](/aoc/2023/16/)
