updated aoc due to the improved script

--- a/aoc/2021-01.md
+++ b/aoc/2021-01.md
@@ -8,8 +8,7 @@ permalink: /aoc/2021/01/
 
 This is a solution of the day 01.
 
-
-# first-part.cpp
+## first-part.cpp
 
 ```cpp
 #include<fstream>
@@ -33,7 +32,7 @@ int main(int argc, char ** argv){
   return 0;
 }
 ```
-# second-part.cpp
+## second-part.cpp
 
 ```cpp
 #include<fstream>
