--- a/aoc/2021-03.md
+++ b/aoc/2021-03.md
@@ -8,8 +8,7 @@ permalink: /aoc/2021/03/
 
 This is a solution of the day 03.
 
-
-# first-part.cpp
+## first-part.cpp
 
 ```cpp
 #include<iostream>
@@ -67,7 +66,7 @@ int main(int argc, char * * argv){
     return 0;
 }
 ```
-# second-part.cpp
+## second-part.cpp
 
 ```cpp
 #include<iostream>
