--- a/aoc/2021-04.md
+++ b/aoc/2021-04.md
@@ -8,8 +8,7 @@ permalink: /aoc/2021/04/
 
 This is a solution of the day 04.
 
-
-# first-part.cpp
+## first-part.cpp
 
 ```cpp
 #include<iostream>
@@ -132,7 +131,7 @@ int main(int argc, char * * argv){
     return 0;
 }
 ```
-# second-part.cpp
+## second-part.cpp
 
 ```cpp
 #include<iostream>
