--- a/aoc/2021-05.md
+++ b/aoc/2021-05.md
@@ -8,8 +8,7 @@ permalink: /aoc/2021/05/
 
 This is a solution of the day 05.
 
-
-# first-part.py
+## first-part.py
 
 ```py
 #!/usr/bin/env python3
