--- a/aoc/2023-16.md
+++ b/aoc/2023-16.md
@@ -8,8 +8,7 @@ permalink: /aoc/2023/16/
 
 This is a solution of the day 16.
 
-
-# main.rs
+## main.rs
 
 ```rs
 use std::fs;
@@ -159,6 +158,7 @@ fn part2(){
 }
 
 fn main() {
+  println!("Day {} - {}", 16, "The Floor Will Be Lava");
   part1();
   part2();
 }
