--- a/aoc/2021-06.md
+++ b/aoc/2021-06.md
@@ -8,8 +8,7 @@ permalink: /aoc/2021/06/
 
 This is a solution of the day 06.
 
-
-# first-part.py
+## first-part.py
 
 ```py
 #!/usr/bin/env python3
