--- a/aoc/2021-07.md
+++ b/aoc/2021-07.md
@@ -8,8 +8,7 @@ permalink: /aoc/2021/07/
 
 This is a solution of the day 07.
 
-
-# first-part.py
+## first-part.py
 
 ```py
 #!/usr/bin/env python3
