--- a/aoc/2021-08.md
+++ b/aoc/2021-08.md
@@ -8,8 +8,7 @@ permalink: /aoc/2021/08/
 
 This is a solution of the day 08.
 
-
-# first-part.py
+## first-part.py
 
 ```py
 #!/usr/bin/env python3
