--- a/aoc/2021-11.md
+++ b/aoc/2021-11.md
@@ -8,8 +8,7 @@ permalink: /aoc/2021/11/
 
 This is a solution of the day 11.
 
-
-# first-part.py
+## first-part.py
 
 ```py
 #!/usr/bin/env python3
