--- a/aoc/2021-14.md
+++ b/aoc/2021-14.md
@@ -8,8 +8,7 @@ permalink: /aoc/2021/14/
 
 This is a solution of the day 14.
 
-
-# first-part.py
+## first-part.py
 
 ```py
 #!/usr/bin/env python3
