--- a/aoc/2023-15.md
+++ b/aoc/2023-15.md
@@ -8,6 +8,16 @@ permalink: /aoc/2023/15/
 
 This is a solution of the day 15.
 
+### Info
+
+#### Part 1
+
+In the first part we just straightforwardly compute the given acii hash.
+
+#### Part 2
+
+In the second part we create  `hash_map` from vector and linked list. Then proceed the given instructions wit hthe ascii hash.
+
 ## main.rs
 
 ```rs
