--- a/aoc/2023.md
+++ b/aoc/2023.md
@@ -27,3 +27,4 @@ This contains tasks from the year 2023.
 - [Day 15](/aoc/2023/15/)
 - [Day 16](/aoc/2023/16/)
 - [Day 17](/aoc/2023/17/)
+- [Day 18](/aoc/2023/18/)
