updated aoc files

--- a/aoc/2023-14.md
+++ b/aoc/2023-14.md
@@ -8,6 +8,16 @@ permalink: /aoc/2023/14/
 
 This is a solution of the day 14.
 
+### Info
+
+#### Part 1
+
+In the first part we create a grid of all stones and shift it to one north side and then compute it.
+
+#### Part 2
+
+In the second part we cycle the shifts counterclockwis and always remember current number of cycle and how the map looked. If we encounter the same situation we take a shortcut by skipping all repeating cycles and only finish the last ones.
+
 ## main.rs
 
 ```rs
@@ -183,6 +193,7 @@ fn part2(){
 }
 
 fn main() {
+  println!("Year 2023 day 14 - Parabolic Reflector Dish");
   part1();
   part2();
 }
