added links to aoc pages

--- a/aoc/2021-03.md
+++ b/aoc/2021-03.md
@@ -1,12 +1,12 @@
 ---
 layout: page
-title: Day 03
+title: Day 3
 parent: Year 2021
 grand_parent: advent of code
 permalink: /aoc/2021/03/
 ---
 
-This is a solution of the day 03.
+This is a solution of the [day 3](https://adventofcode.com/2021/day/3).
 
 ## first-part.cpp
 
