--- a/aoc/2021-04.md
+++ b/aoc/2021-04.md
@@ -1,12 +1,12 @@
 ---
 layout: page
-title: Day 04
+title: Day 4
 parent: Year 2021
 grand_parent: advent of code
 permalink: /aoc/2021/04/
 ---
 
-This is a solution of the day 04.
+This is a solution of the [day 4](https://adventofcode.com/2021/day/4).
 
 ## first-part.cpp
 
