--- a/aoc/2021-05.md
+++ b/aoc/2021-05.md
@@ -1,12 +1,12 @@
 ---
 layout: page
-title: Day 05
+title: Day 5
 parent: Year 2021
 grand_parent: advent of code
 permalink: /aoc/2021/05/
 ---
 
-This is a solution of the day 05.
+This is a solution of the [day 5](https://adventofcode.com/2021/day/5).
 
 ## first-part.py
 
