--- a/aoc/2021-07.md
+++ b/aoc/2021-07.md
@@ -1,12 +1,12 @@
 ---
 layout: page
-title: Day 07
+title: Day 7
 parent: Year 2021
 grand_parent: advent of code
 permalink: /aoc/2021/07/
 ---
 
-This is a solution of the day 07.
+This is a solution of the [day 7](https://adventofcode.com/2021/day/7).
 
 ## first-part.py
 
