--- a/aoc/2021-08.md
+++ b/aoc/2021-08.md
@@ -1,12 +1,12 @@
 ---
 layout: page
-title: Day 08
+title: Day 8
 parent: Year 2021
 grand_parent: advent of code
 permalink: /aoc/2021/08/
 ---
 
-This is a solution of the day 08.
+This is a solution of the [day 8](https://adventofcode.com/2021/day/8).
 
 ## first-part.py
 
