--- a/aoc/2022-03.md
+++ b/aoc/2022-03.md
@@ -1,12 +1,12 @@
 ---
 layout: page
-title: Day 03
+title: Day 3
 parent: Year 2022
 grand_parent: advent of code
 permalink: /aoc/2022/03/
 ---
 
-This is a solution of the day 03.
+This is a solution of the [day 3](https://adventofcode.com/2022/day/3).
 
 ## main.py
 
