--- a/aoc/2022-12.md
+++ b/aoc/2022-12.md
@@ -6,7 +6,7 @@ grand_parent: advent of code
 permalink: /aoc/2022/12/
 ---
 
-This is a solution of the day 12.
+This is a solution of the [day 12](https://adventofcode.com/2022/day/12).
 
 ## main.cpp
 
