--- a/aoc/2023-09.md
+++ b/aoc/2023-09.md
@@ -1,12 +1,12 @@
 ---
 layout: page
-title: Day 09
+title: Day 9
 parent: Year 2023
 grand_parent: advent of code
 permalink: /aoc/2023/09/
 ---
 
-This is a solution of the day 09.
+This is a solution of the [day 9](https://adventofcode.com/2023/day/9).
 
 ## main.py
 
