--- a/aoc/2023-17.md
+++ b/aoc/2023-17.md
@@ -6,7 +6,7 @@ grand_parent: advent of code
 permalink: /aoc/2023/17/
 ---
 
-This is a solution of the day 17.
+This is a solution of the [day 17](https://adventofcode.com/2023/day/17).
 
 ### Info
 
