--- a/aoc/2021-01.md
+++ b/aoc/2021-01.md
@@ -1,12 +1,12 @@
 ---
 layout: page
-title: Day 01
+title: Day 1
 parent: Year 2021
 grand_parent: advent of code
 permalink: /aoc/2021/01/
 ---
 
-This is a solution of the day 01.
+This is a solution of the [day 1](https://adventofcode.com/2021/day/1).
 
 ## first-part.cpp
 
