--- a/aoc/2021-02.md
+++ b/aoc/2021-02.md
@@ -1,12 +1,12 @@
 ---
 layout: page
-title: Day 02
+title: Day 2
 parent: Year 2021
 grand_parent: advent of code
 permalink: /aoc/2021/02/
 ---
 
-This is a solution of the day 02.
+This is a solution of the [day 2](https://adventofcode.com/2021/day/2).
 
 ## main.cpp
 
