--- a/aoc/2021-06.md
+++ b/aoc/2021-06.md
@@ -1,12 +1,12 @@
 ---
 layout: page
-title: Day 06
+title: Day 6
 parent: Year 2021
 grand_parent: advent of code
 permalink: /aoc/2021/06/
 ---
 
-This is a solution of the day 06.
+This is a solution of the [day 6](https://adventofcode.com/2021/day/6).
 
 ## first-part.py
 
