--- a/aoc/2021-11.md
+++ b/aoc/2021-11.md
@@ -6,7 +6,7 @@ grand_parent: advent of code
 permalink: /aoc/2021/11/
 ---
 
-This is a solution of the day 11.
+This is a solution of the [day 11](https://adventofcode.com/2021/day/11).
 
 ## first-part.py
 
