--- a/aoc/2022-04.md
+++ b/aoc/2022-04.md
@@ -1,12 +1,12 @@
 ---
 layout: page
-title: Day 04
+title: Day 4
 parent: Year 2022
 grand_parent: advent of code
 permalink: /aoc/2022/04/
 ---
 
-This is a solution of the day 04.
+This is a solution of the [day 4](https://adventofcode.com/2022/day/4).
 
 ## main.py
 
