--- a/aoc/2023-01.md
+++ b/aoc/2023-01.md
@@ -1,12 +1,12 @@
 ---
 layout: page
-title: Day 01
+title: Day 1
 parent: Year 2023
 grand_parent: advent of code
 permalink: /aoc/2023/01/
 ---
 
-This is a solution of the day 01.
+This is a solution of the [day 1](https://adventofcode.com/2023/day/1).
 
 ## main.py
 
