--- a/aoc/2023-07.md
+++ b/aoc/2023-07.md
@@ -1,12 +1,12 @@
 ---
 layout: page
-title: Day 07
+title: Day 7
 parent: Year 2023
 grand_parent: advent of code
 permalink: /aoc/2023/07/
 ---
 
-This is a solution of the day 07.
+This is a solution of the [day 7](https://adventofcode.com/2023/day/7).
 
 ## main.cpp
 
