--- a/aoc/2023-10.md
+++ b/aoc/2023-10.md
@@ -6,7 +6,7 @@ grand_parent: advent of code
 permalink: /aoc/2023/10/
 ---
 
-This is a solution of the day 10.
+This is a solution of the [day 10](https://adventofcode.com/2023/day/10).
 
 ## main.py
 
