--- a/aoc/2023-14.md
+++ b/aoc/2023-14.md
@@ -6,7 +6,7 @@ grand_parent: advent of code
 permalink: /aoc/2023/14/
 ---
 
-This is a solution of the day 14.
+This is a solution of the [day 14](https://adventofcode.com/2023/day/14).
 
 ### Info
 
