--- a/aoc/2023-18.md
+++ b/aoc/2023-18.md
@@ -6,7 +6,7 @@ grand_parent: advent of code
 permalink: /aoc/2023/18/
 ---
 
-This is a solution of the day 18.
+This is a solution of the [day 18](https://adventofcode.com/2023/day/18).
 
 ### Info
 
