--- a/aoc/2023.md
+++ b/aoc/2023.md
@@ -28,3 +28,4 @@ This contains tasks from the [year 2023](https://adventofcode.com/2023).
 - [Day 16](/aoc/2023/16/)
 - [Day 17](/aoc/2023/17/)
 - [Day 18](/aoc/2023/18/)
+- [Day 19](/aoc/2023/19/)
