--- a/aoc/2023-19.md
+++ b/aoc/2023-19.md
@@ -60,7 +60,7 @@ fn get_considering(c: char) -> usize {
     'm' => return M,
     'a' => return A,
     's' => return S,
-     _  => return 5,
+     _  => return INV,
    }
  }
 
