--- a/aoc/2023.md
+++ b/aoc/2023.md
@@ -30,3 +30,4 @@ This contains tasks from the [year 2023](https://adventofcode.com/2023).
 - [Day 18](/aoc/2023/18/)
 - [Day 19](/aoc/2023/19/)
 - [Day 20](/aoc/2023/20/)
+- [Day 21](/aoc/2023/21/)
