updated aoc pages

--- a/aoc/2023-20.md
+++ b/aoc/2023-20.md
@@ -16,7 +16,7 @@ In the first part you run the bfs to firstly find predecessors. Then you have th
 
 #### Part 2
 
-The second part is easier to solve by hand. You may create a `graph.dot` in graphviz dot language and then by running `dot -Tpng graph.dot -o graph.png` create a picture of the graph. There are 4 modules that behave like a binary counters. For each you represent it by a binary number; 1 if the edge goes to the conjection and 0 otherwise. After you represent it you use LCM for them and that is the answer.
+The second part is easier to solve by hand. You may create a `graph.dot` in [graphviz dot language](https://graphviz.org/doc/info/lang.html) and then by running `dot -Tpng graph.dot -o graph.png` create a picture of the graph. There are 4 modules that behave like a binary counters. For each you represent it by a binary number; 1 if the edge goes to the conjection and 0 otherwise. After you represent it you use LCM for them and that is the answer.
 
 ## main.rs
 
@@ -251,7 +251,7 @@ fn part2() {
   create_graphviz(&hash_map, "graph.dot");
   // This is actually only my result.
   let vec: Vec<u64> = [0b111111010011, 0b111100000111, 0b111100100101, 0b111011010101].to_vec();
-  println!("This is just my solution, youts can be found by looking at the graph in graph.dot.");
+  println!("This is just my solution, yours can be found by looking at the graph in graph.dot.");
   println!("Try running: dot -Tpng graph.dot -o graph.png to see the graph.");
   println!("Simply create binary numbers for each module; 1 if it goes in and 0 otherwise.");
   println!("Part 2: {}", lcm_vec(&vec));
