--- a/aoc/2023-21.md
+++ b/aoc/2023-21.md
@@ -12,17 +12,29 @@ This is a solution of the [day 21](https://adventofcode.com/2023/day/21).
 
 #### Part 1
 
+For the first part we have more options.
+
+1. Completely brute force it. It is just `64` steps. **:D**
+2. Remember two sets: Odd visited and even visited. Then see the number of even visited with the limit `64`.
+3. Use `bfs` algorithm to compute distances to every place. Then just filter out these that were visited in an even steep and is under the limit of `64`.
+
 #### Part 2
 
+The second part uses the implemented `bfs`. We are not able to compute it for all `26501365` steps. But there is some quite nice math behind the input. Firstly it is a square and there is a straight line from the middle to each side. Every neighbouring blocks switch **even**/**odd** parity. And lastly we campute the corners.
+
+This is just simplified steps of the computation. I actually didn't come up with that on my own, but one can see it make sense due to the nice input. By which we can have some assumptions.
 
 ## main.rs
 
 ```rs
 use std::fs;
-use std::collections::HashSet;
+use std::collections::{HashSet, VecDeque};
 
 type Grid<T> = Vec<Vec<T>>;
 type Position = (usize, usize);
+
+const ROCK: i64 = -3;
+const EMPTY: i64 = -1;
 
 fn read_file(filepath: &str) -> (Grid<bool>, Position) {
   let contents = fs::read_to_string(filepath);
@@ -53,46 +65,82 @@ fn add(a: usize, b: i8) -> usize {
   (a as i64 + b as i64) as usize
 }
 
-fn step(garden: &Grid<bool>, position: Position) -> Vec<Position> {
-  let mut positions: Vec<Position> = vec!();
+fn bfs(garden: &Grid<bool>, position: Position) -> Grid<i64> {
+  let mut distances: Grid<i64> = vec![];
+  for g in garden {
+    distances.push(vec![EMPTY; g.len()])
+  }
+
+  let mut visited: HashSet<Position> = HashSet::new();
+  visited.insert(position);
   let neighbors: [(i8, i8); 4] = [(1, 0), (-1,0), (0,1), (0,-1)];
-  for n in neighbors {
-    let pos = (add(position.0,n.0), add(position.1,n.1));
-    if pos.0 >= garden.len() || pos.1 >= garden[pos.0].len() {
+  let mut queue: VecDeque<(Position, i64)> = VecDeque::new();
+  queue.push_back((position, 0));
+
+  while !queue.is_empty() {
+    let (pos, counter) = queue.pop_front().unwrap();
+    if !garden[pos.0][pos.1] {
+      distances[pos.0][pos.1] = ROCK;
       continue;
     }
-    if garden[pos.0][pos.1] {
-      positions.push(pos);
+    else {
+      distances[pos.0][pos.1] = counter;
     }
-  }
-  positions
-}
-
-fn steps(garden: &Grid<bool>, positions: &mut HashSet<Position>) {
-  let pos: Vec<Position> = positions.clone().into_iter().collect();
-  positions.clear();
-  for p in pos {
-    let neighbors = step(garden, p);
     for n in neighbors {
-      positions.insert(n);
+      let new_pos = (add(pos.0,n.0), add(pos.1,n.1));
+      if new_pos.0 >= garden.len() || new_pos.1 >= garden[new_pos.0].len() {
+        continue;
+      }
+      if !visited.contains(&new_pos) {
+        queue.push_back((new_pos, counter + 1));
+        visited.insert(new_pos);
+      }
     }
   }
+  distances
 }
 
 fn part1() {
   let (garden, start) = read_file("INPUT");
-  let mut set: HashSet<Position> = HashSet::new();
-  set.insert(start);
-  for _ in 0 .. 64 {
-    steps(&garden, &mut set);
-  }
-  println!("Part 1: {}", set.len());
+  let dist = bfs(&garden, start);
+  let limit: i64 = 64;
+  let total = dist.into_iter()
+        .map(|vec| vec.into_iter()
+          .filter(|x| x % 2 == 0 && x != &ROCK && x <= &limit)
+          .count())
+        .fold(0, |acc, sum| acc + sum);
+  println!("Part 1: {}", total);
 }
 
 fn part2() {
-  // 26501365 steps and infinite repetition of the garden
-  let (_garden, _start) = read_file("INPUT");
-  println!("Part 2: {}", 0);
+  let (garden, start) = read_file("INPUT");
+  let dist = bfs(&garden, start);
+  let magical_const: usize = 26501365;
+  let n: usize = magical_const / garden.len();
+  let limit: i64 = magical_const as i64 % garden.len() as i64;
+  let full_even = dist.clone().into_iter()
+        .map(|vec| vec.into_iter()
+          .filter(|x| x % 2 == 0 && x != &ROCK)
+          .count())
+        .fold(0, |acc, sum| acc + sum);
+  let full_odd = dist.clone().into_iter()
+        .map(|vec| vec.into_iter()
+          .filter(|x| x % 2 == 1 && x != &ROCK)
+          .count())
+        .fold(0, |acc, sum| acc + sum);
+  let corner_odd = dist.clone().into_iter()
+        .map(|vec| vec.into_iter()
+          .filter(|x| x % 2 == 1 && x != &ROCK && x > &limit)
+          .count())
+        .fold(0, |acc, sum| acc + sum);
+  let corner_even = dist.clone().into_iter()
+        .map(|vec| vec.into_iter()
+          .filter(|x| x % 2 == 0 && x != &ROCK && x > &limit)
+          .count())
+        .fold(0, |acc, sum| acc + sum);
+  
+  let total = (n+1)*(n+1) * full_odd + n*n * full_even - (n+1) * corner_odd + n * corner_even;
+  println!("Part 2: {}", total);
 }
 
 fn main() {
