--- a/aoc/2023.md
+++ b/aoc/2023.md
@@ -31,3 +31,4 @@ This contains tasks from the [year 2023](https://adventofcode.com/2023).
 - [Day 19](/aoc/2023/19/)
 - [Day 20](/aoc/2023/20/)
 - [Day 21](/aoc/2023/21/)
+- [Day 22](/aoc/2023/22/)
