updated pages with backwards links

--- a/aoc/2015.md
+++ b/aoc/2015.md
@@ -6,7 +6,7 @@ permalink: /aoc/2015/
 has_children: true
 ---
 
-This contains tasks from the [year 2015](https://adventofcode.com/2015).
+This contains tasks from the [year 2015](https://adventofcode.com/2015). Go back to [AOC](/aoc/).
 
 ### Days
 
