--- a/aoc/2021-05.md
+++ b/aoc/2021-05.md
@@ -6,7 +6,7 @@ grand_parent: advent of code
 permalink: /aoc/2021/05/
 ---
 
-This is a solution of the [day 5](https://adventofcode.com/2021/day/5).
+This is a solution of the [day 5](https://adventofcode.com/2021/day/5). Go back to year [2021](/aoc/2021). Go back to [AOC](/aoc/).
 
 ## first-part.py
 
