--- a/aoc/2015-02.md
+++ b/aoc/2015-02.md
@@ -6,7 +6,7 @@ grand_parent: advent of code
 permalink: /aoc/2015/02/
 ---
 
-This is a solution of the [day 2](https://adventofcode.com/2015/day/2).
+This is a solution of the [day 2](https://adventofcode.com/2015/day/2). Go back to year [2015](/aoc/2015). Go back to [AOC](/aoc/).
 
 ### Info
 
