--- a/aoc/2021-01.md
+++ b/aoc/2021-01.md
@@ -6,7 +6,7 @@ grand_parent: advent of code
 permalink: /aoc/2021/01/
 ---
 
-This is a solution of the [day 1](https://adventofcode.com/2021/day/1).
+This is a solution of the [day 1](https://adventofcode.com/2021/day/1). Go back to year [2021](/aoc/2021). Go back to [AOC](/aoc/).
 
 ## first-part.cpp
 
