--- a/aoc/2021-03.md
+++ b/aoc/2021-03.md
@@ -6,7 +6,7 @@ grand_parent: advent of code
 permalink: /aoc/2021/03/
 ---
 
-This is a solution of the [day 3](https://adventofcode.com/2021/day/3).
+This is a solution of the [day 3](https://adventofcode.com/2021/day/3). Go back to year [2021](/aoc/2021). Go back to [AOC](/aoc/).
 
 ## first-part.cpp
 
