--- a/aoc/2021-04.md
+++ b/aoc/2021-04.md
@@ -6,7 +6,7 @@ grand_parent: advent of code
 permalink: /aoc/2021/04/
 ---
 
-This is a solution of the [day 4](https://adventofcode.com/2021/day/4).
+This is a solution of the [day 4](https://adventofcode.com/2021/day/4). Go back to year [2021](/aoc/2021). Go back to [AOC](/aoc/).
 
 ## first-part.cpp
 
