--- a/aoc/2021.md
+++ b/aoc/2021.md
@@ -6,7 +6,7 @@ permalink: /aoc/2021/
 has_children: true
 ---
 
-This contains tasks from the [year 2021](https://adventofcode.com/2021).
+This contains tasks from the [year 2021](https://adventofcode.com/2021). Go back to [AOC](/aoc/).
 
 ### Days
 
