--- a/aoc/2022-02.md
+++ b/aoc/2022-02.md
@@ -6,7 +6,7 @@ grand_parent: advent of code
 permalink: /aoc/2022/02/
 ---
 
-This is a solution of the [day 2](https://adventofcode.com/2022/day/2).
+This is a solution of the [day 2](https://adventofcode.com/2022/day/2). Go back to year [2022](/aoc/2022). Go back to [AOC](/aoc/).
 
 ## main.py
 
