--- a/aoc/2022-13.md
+++ b/aoc/2022-13.md
@@ -6,7 +6,7 @@ grand_parent: advent of code
 permalink: /aoc/2022/13/
 ---
 
-This is a solution of the [day 13](https://adventofcode.com/2022/day/13).
+This is a solution of the [day 13](https://adventofcode.com/2022/day/13). Go back to year [2022](/aoc/2022). Go back to [AOC](/aoc/).
 
 ## main.py
 
