--- a/aoc/2022-15.md
+++ b/aoc/2022-15.md
@@ -6,7 +6,7 @@ grand_parent: advent of code
 permalink: /aoc/2022/15/
 ---
 
-This is a solution of the [day 15](https://adventofcode.com/2022/day/15).
+This is a solution of the [day 15](https://adventofcode.com/2022/day/15). Go back to year [2022](/aoc/2022). Go back to [AOC](/aoc/).
 
 ## main.py
 
