--- a/aoc/2022.md
+++ b/aoc/2022.md
@@ -6,7 +6,7 @@ permalink: /aoc/2022/
 has_children: true
 ---
 
-This contains tasks from the [year 2022](https://adventofcode.com/2022).
+This contains tasks from the [year 2022](https://adventofcode.com/2022). Go back to [AOC](/aoc/).
 
 ### Days
 
