--- a/aoc/2023-04.md
+++ b/aoc/2023-04.md
@@ -6,7 +6,7 @@ grand_parent: advent of code
 permalink: /aoc/2023/04/
 ---
 
-This is a solution of the [day 4](https://adventofcode.com/2023/day/4).
+This is a solution of the [day 4](https://adventofcode.com/2023/day/4). Go back to year [2023](/aoc/2023). Go back to [AOC](/aoc/).
 
 ## main.py
 
