--- a/aoc/2023-07.md
+++ b/aoc/2023-07.md
@@ -6,7 +6,7 @@ grand_parent: advent of code
 permalink: /aoc/2023/07/
 ---
 
-This is a solution of the [day 7](https://adventofcode.com/2023/day/7).
+This is a solution of the [day 7](https://adventofcode.com/2023/day/7). Go back to year [2023](/aoc/2023). Go back to [AOC](/aoc/).
 
 ## main.cpp
 
