--- a/aoc/2023-09.md
+++ b/aoc/2023-09.md
@@ -6,7 +6,7 @@ grand_parent: advent of code
 permalink: /aoc/2023/09/
 ---
 
-This is a solution of the [day 9](https://adventofcode.com/2023/day/9).
+This is a solution of the [day 9](https://adventofcode.com/2023/day/9). Go back to year [2023](/aoc/2023). Go back to [AOC](/aoc/).
 
 ## main.py
 
