--- a/aoc/2023-16.md
+++ b/aoc/2023-16.md
@@ -6,7 +6,7 @@ grand_parent: advent of code
 permalink: /aoc/2023/16/
 ---
 
-This is a solution of the [day 16](https://adventofcode.com/2023/day/16).
+This is a solution of the [day 16](https://adventofcode.com/2023/day/16). Go back to year [2023](/aoc/2023). Go back to [AOC](/aoc/).
 
 ### Info
 
