--- a/aoc/2023-19.md
+++ b/aoc/2023-19.md
@@ -6,7 +6,7 @@ grand_parent: advent of code
 permalink: /aoc/2023/19/
 ---
 
-This is a solution of the [day 19](https://adventofcode.com/2023/day/19).
+This is a solution of the [day 19](https://adventofcode.com/2023/day/19). Go back to year [2023](/aoc/2023). Go back to [AOC](/aoc/).
 
 ### Info
 
