--- a/aoc/2023-22.md
+++ b/aoc/2023-22.md
@@ -6,7 +6,7 @@ grand_parent: advent of code
 permalink: /aoc/2023/22/
 ---
 
-This is a solution of the [day 22](https://adventofcode.com/2023/day/22).
+This is a solution of the [day 22](https://adventofcode.com/2023/day/22). Go back to year [2023](/aoc/2023). Go back to [AOC](/aoc/).
 
 ### Info
 
