--- a/aoc/2023.md
+++ b/aoc/2023.md
@@ -6,7 +6,7 @@ permalink: /aoc/2023/
 has_children: true
 ---
 
-This contains tasks from the [year 2023](https://adventofcode.com/2023).
+This contains tasks from the [year 2023](https://adventofcode.com/2023). Go back to [AOC](/aoc/).
 
 ### Days
 
