--- a/aoc/2023-13.md
+++ b/aoc/2023-13.md
@@ -65,6 +65,7 @@ def find_mirror(smudges):
     total += compute(matrix, smudges)
     return total
 
-print(f"First part: {find_mirror(False)}")
-print(f"Second part: {find_mirror(True)}")
+if __name__ == "__main__":
+  print(f"First part: {find_mirror(False)}")
+  print(f"Second part: {find_mirror(True)}")
 ```
