--- a/aoc/2023.md
+++ b/aoc/2023.md
@@ -32,3 +32,4 @@ This contains tasks from the [year 2023](https://adventofcode.com/2023). Go back
 - [Day 20](/aoc/2023/20/)
 - [Day 21](/aoc/2023/21/)
 - [Day 22](/aoc/2023/22/)
+- [Day 23](/aoc/2023/23/)
