added solution of day 24

--- a/aoc/2023.md
+++ b/aoc/2023.md
@@ -33,3 +33,4 @@ This contains tasks from the [year 2023](https://adventofcode.com/2023). Go back
 - [Day 21](/aoc/2023/21/)
 - [Day 22](/aoc/2023/22/)
 - [Day 23](/aoc/2023/23/)
+- [Day 24](/aoc/2023/24/)
