--- a/aoc/2023.md
+++ b/aoc/2023.md
@@ -34,3 +34,4 @@ This contains tasks from the [year 2023](https://adventofcode.com/2023). Go back
 - [Day 22](/aoc/2023/22/)
 - [Day 23](/aoc/2023/23/)
 - [Day 24](/aoc/2023/24/)
+- [Day 25](/aoc/2023/25/)
