updated pages to respect the new script

--- a/aoc/2015.md
+++ b/aoc/2015.md
@@ -2,7 +2,7 @@
 layout: page
 title: Year 2015
 parent: advent of code
-permalink: /aoc/2015/
+permalink: /aoc/2015
 has_children: true
 ---
 
@@ -10,5 +10,5 @@ This contains tasks from the [year 2015](https://adventofcode.com/2015). Go back
 
 ### Days
 
-- [Day 01](/aoc/2015/01/)
-- [Day 02](/aoc/2015/02/)
+- [Day 1](/aoc/2015/1/)
+- [Day 2](/aoc/2015/2/)
