--- a/aoc/2021.md
+++ b/aoc/2021.md
@@ -2,7 +2,7 @@
 layout: page
 title: Year 2021
 parent: advent of code
-permalink: /aoc/2021/
+permalink: /aoc/2021
 has_children: true
 ---
 
@@ -10,13 +10,13 @@ This contains tasks from the [year 2021](https://adventofcode.com/2021). Go back
 
 ### Days
 
-- [Day 01](/aoc/2021/01/)
-- [Day 02](/aoc/2021/02/)
-- [Day 03](/aoc/2021/03/)
-- [Day 04](/aoc/2021/04/)
-- [Day 05](/aoc/2021/05/)
-- [Day 06](/aoc/2021/06/)
-- [Day 07](/aoc/2021/07/)
-- [Day 08](/aoc/2021/08/)
+- [Day 1](/aoc/2021/1/)
+- [Day 2](/aoc/2021/2/)
+- [Day 3](/aoc/2021/3/)
+- [Day 4](/aoc/2021/4/)
+- [Day 5](/aoc/2021/5/)
+- [Day 6](/aoc/2021/6/)
+- [Day 7](/aoc/2021/7/)
+- [Day 8](/aoc/2021/8/)
 - [Day 11](/aoc/2021/11/)
 - [Day 14](/aoc/2021/14/)
