--- a/aoc/2023-25.md
+++ b/aoc/2023-25.md
@@ -14,6 +14,8 @@ This is a solution of the [day 25](https://adventofcode.com/2023/day/25). Go bac
 
 The first part is done by [graphviz dot language](https://graphviz.org/doc/info/lang.html). So the code creates a file `graph.dot` than you run `dot -Kneato -Tsvg graph.dot -o graph.svg`. You find the three pairs forming the min cut and manually insert it into the code. Then you ran the code again.
 
+The alternate algorithm is to use [Karger-Steins](https://en.wikipedia.org/wiki/Karger%27s_algorithm) approximation algorithm. This I didn't make.
+
 #### Part 2
 
 **PUSH THE RED BUTTON.**
@@ -61,7 +63,7 @@ fn create_graphviz(filepath: &str, wires: &Vec<Wire>) {
   }
   for wire in wires {
     for end in &wire.ends {
-      match writeln!(file.as_ref().expect("REASON"), "{}", format!("	{} -- {};", wire.start, end)) {
+      match writeln!(file.as_ref().expect("REASON"), "{}", format!("  {} -- {};", wire.start, end)) {
       Ok(()) => {},
       Err(..) => return,
       }
@@ -137,3 +139,4 @@ fn main() {
   part2();
 }
 ```
+
