--- a/aoc/2022.md
+++ b/aoc/2022.md
@@ -2,7 +2,7 @@
 layout: page
 title: Year 2022
 parent: advent of code
-permalink: /aoc/2022/
+permalink: /aoc/2022
 has_children: true
 ---
 
@@ -10,16 +10,15 @@ This contains tasks from the [year 2022](https://adventofcode.com/2022). Go back
 
 ### Days
 
-- [Day 01](/aoc/2022/01/)
-- [Day 02](/aoc/2022/02/)
-- [Day 03](/aoc/2022/03/)
-- [Day 04](/aoc/2022/04/)
-- [Day 05](/aoc/2022/05/)
-- [Day 06](/aoc/2022/06/)
-- [Day 07](/aoc/2022/07/)
-- [Day 08](/aoc/2022/08/)
-- [Day 09](/aoc/2022/09/)
-- [Day 10](/aoc/2022/10/)
+- [Day 1](/aoc/2022/1/)
+- [Day 2](/aoc/2022/2/)
+- [Day 3](/aoc/2022/3/)
+- [Day 4](/aoc/2022/4/)
+- [Day 5](/aoc/2022/5/)
+- [Day 6](/aoc/2022/6/)
+- [Day 7](/aoc/2022/7/)
+- [Day 8](/aoc/2022/8/)
+- [Day 9](/aoc/2022/9/)
 - [Day 11](/aoc/2022/11/)
 - [Day 12](/aoc/2022/12/)
 - [Day 13](/aoc/2022/13/)
