--- a/aoc/2023.md
+++ b/aoc/2023.md
@@ -2,7 +2,7 @@
 layout: page
 title: Year 2023
 parent: advent of code
-permalink: /aoc/2023/
+permalink: /aoc/2023
 has_children: true
 ---
 
@@ -10,16 +10,15 @@ This contains tasks from the [year 2023](https://adventofcode.com/2023). Go back
 
 ### Days
 
-- [Day 01](/aoc/2023/01/)
-- [Day 02](/aoc/2023/02/)
-- [Day 03](/aoc/2023/03/)
-- [Day 04](/aoc/2023/04/)
-- [Day 05](/aoc/2023/05/)
-- [Day 06](/aoc/2023/06/)
-- [Day 07](/aoc/2023/07/)
-- [Day 08](/aoc/2023/08/)
-- [Day 09](/aoc/2023/09/)
-- [Day 10](/aoc/2023/10/)
+- [Day 1](/aoc/2023/1/)
+- [Day 2](/aoc/2023/2/)
+- [Day 3](/aoc/2023/3/)
+- [Day 4](/aoc/2023/4/)
+- [Day 5](/aoc/2023/5/)
+- [Day 6](/aoc/2023/6/)
+- [Day 7](/aoc/2023/7/)
+- [Day 8](/aoc/2023/8/)
+- [Day 9](/aoc/2023/9/)
 - [Day 11](/aoc/2023/11/)
 - [Day 12](/aoc/2023/12/)
 - [Day 13](/aoc/2023/13/)
@@ -29,7 +28,6 @@ This contains tasks from the [year 2023](https://adventofcode.com/2023). Go back
 - [Day 17](/aoc/2023/17/)
 - [Day 18](/aoc/2023/18/)
 - [Day 19](/aoc/2023/19/)
-- [Day 20](/aoc/2023/20/)
 - [Day 21](/aoc/2023/21/)
 - [Day 22](/aoc/2023/22/)
 - [Day 23](/aoc/2023/23/)
