--- a/aoc/2015-1.md
+++ b/aoc/2015-1.md
@@ -30,18 +30,6 @@ fn read_file(filepath: &str) -> String{
   return lines.next().unwrap().to_string();
 }
 
-fn floor_number(string: &str) -> i64 {
-  let mut floor: i64 = 0;
-  for c in string.chars() {
-    match c {
-      '(' => floor += 1,
-      ')' => floor -= 1,
-      _   => floor = floor,
-    }
-  }
-  floor
-}
-
 fn basement(string: &str) -> i64 {
   let mut floor: i64 = 0;
   let mut i: i64 = 0;
@@ -61,7 +49,10 @@ fn basement(string: &str) -> i64 {
 
 fn part1(){
   let line = read_file("INPUT");
-  println!("Part 1: {}", floor_number(&line));
+  let total: i64 = line.chars().into_iter()
+      .map(|c| if c == '(' { 1 } else { -1 })
+      .sum();
+  println!("Part 1: {}", total);
 }
 
 fn part2(){
