--- a/aoc/2015.md
+++ b/aoc/2015.md
@@ -13,3 +13,4 @@ This contains tasks from the [year 2015](https://adventofcode.com/2015). Go back
 - [Day 1](/aoc/2015/1/)
 - [Day 2](/aoc/2015/2/)
 - [Day 3](/aoc/2015/3/)
+- [Day 5](/aoc/2015/5/)
