--- a/aoc/2015.md
+++ b/aoc/2015.md
@@ -13,4 +13,6 @@ This contains tasks from the [year 2015](https://adventofcode.com/2015). Go back
 - [Day 1](/aoc/2015/1/)
 - [Day 2](/aoc/2015/2/)
 - [Day 3](/aoc/2015/3/)
+- [Day 4](/aoc/2015/4/)
 - [Day 5](/aoc/2015/5/)
+- [Day 6](/aoc/2015/6/)
